# deepalpha

./: .env.example  .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROFILE_README.md  README.md  SECURITY.md  config.py  dashboard.py  deepalpha.py  docker-compose.yml  download_data.py  exchange_adapter.py  features.py  gnn_model.py  index.html  liquidation_levels.py  mkdocs.yml  order_flow_analyzer.py  patch_all_fixes.py  patch_app.py  patch_bug1.py  patch_bug2.py  patch_bug3.py  patch_bug4.py  patch_bug5.py  patch_p2a.py  patch_pro_trader.py  patch_review8.py  pump_config_example.env  pump_scanner.py  regime_detector.py  requirements.txt  review8_patch.py  risk_manager.py  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-reply.yml  docs.yml  tests.yml
architecture/: index.html
blog/: how-i-built-deepalpha.md
configuration/: index.html
docs/: architecture.md  configuration.md  faq.md  features.md  getting-started.md  index.md  strategies.md
faq/: index.html
features/: index.html
freqai-plugin/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  config_example.json  deepalpha_model.py  example_strategy.py  pyproject.toml  setup.py
freqai-plugin/deepalpha_freqai/: __init__.py  deepalpha_model.py
freqai-plugin/examples/: demo.py  quickstart.ipynb
freqai-plugin/tests/: test_deepalpha_model.py
getting-started/: index.html
site/: 404.html  index.html
site/architecture/: index.html
site/faq/: index.html
site/features/: index.html
site/getting-started/: index.html
site/search/: search_index.json
site/strategies/: index.html
strategies/: index.html
tests/: conftest.py  test_exchange_adapter.py  test_features.py  test_risk_manager.py
