[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepalpha-freqai"
version = "1.0.0"
description = "DeepAlpha ML pipeline as a FreqAI plugin for Freqtrade"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "DeepAlpha Team"}]
keywords = ["crypto", "trading", "freqtrade", "freqai", "machine-learning", "lightgbm", "bitget"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "lightgbm>=3.3",
    "shap>=0.41",
    "scikit-learn>=1.0",
    "numpy>=1.21",
    "pandas>=1.3",
]

[project.urls]
Homepage = "https://deepalphabot.com"
Repository = "https://github.com/stefanoviana/deepalpha"
Documentation = "https://github.com/stefanoviana/deepalpha/tree/main/freqai-plugin"
Discord = "https://discord.gg/P4yX686m"
